# touchportal-plugin

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SESSION.md
builder/: Cargo.toml
builder/src/: actions.rs  codegen.rs  connectors.rs  data.rs  events.rs  lib.rs  protocol.rs  settings.rs  states.rs
builder/src/protocol/: incoming.rs  outgoing.rs
feature-tests-workspace/: Cargo.toml  README.md  run_feature_tests.py
feature-tests-workspace/all-data-types/src/: main.rs
feature-tests-workspace/boundary-values/: build.rs
feature-tests-workspace/boundary-values/src/: main.rs
feature-tests-workspace/minimal-single/: build.rs
feature-tests-workspace/minimal-single/src/: main.rs
feature-tests-workspace/no-actions/src/: main.rs
feature-tests-workspace/no-events/: build.rs
feature-tests-workspace/no-events/src/: main.rs
feature-tests-workspace/stress/: Cargo.toml  build.rs
feature-tests-workspace/stress/src/: main.rs
feature-tests-workspace/subcategories/src/: main.rs
plugin/: Cargo.toml  build.rs  package.sh
plugin/src/: main.rs
plugins/: README.md
plugins/youtube/: Cargo.toml  QUOTA.md  README.TODO.md  README.md  SESSION.md  TARGET.md  TODO.md  build.rs  install.sh  oauth_success.html  package.sh
plugins/youtube/src/: activity.rs  lib.rs  main.rs  notifications.rs  oauth.rs  plugin.rs  youtube_client.rs
sdk/: Cargo.toml
sdk/src/: actions.rs  codegen.rs  connectors.rs  data.rs  events.rs  lib.rs  mock.rs  protocol.rs  settings.rs  states.rs
sdk/src/protocol/: incoming.rs  outgoing.rs
sdk/src/snapshots/: touchportal_sdk__actions__tests__action_validation_duplicate_languages.snap  touchportal_sdk__actions__tests__action_validation_empty_name.snap  touchportal_sdk__actions__tests__action_validation_invalid_choice_initial.snap  touchportal_sdk__actions__tests__action_validation_missing_data_field_in_lines.snap  touchportal_sdk__actions__tests__action_validation_whitespace_only_id.snap  touchportal_sdk__actions__tests__serialize_tutorial_sdk_plugin_dynamic_action.snap  touchportal_sdk__actions__tests__serialize_tutorial_sdk_plugin_multi_lang_action.snap  touchportal_sdk__actions__tests__serialize_tutorial_sdk_plugin_static_action.snap  touchportal_sdk__codegen__tests__gen_connect_individual.snap  touchportal_sdk__codegen__tests__gen_incoming_individual.snap  touchportal_sdk__codegen__tests__gen_outgoing_individual.snap  touchportal_sdk__codegen__tests__gen_settings_individual.snap  touchportal_sdk__codegen__tests__gen_settings_with_various_types.snap  touchportal_sdk__codegen__tests__generate_complex_plugin.snap  touchportal_sdk__codegen__tests__generate_empty_plugin.snap  touchportal_sdk__codegen__tests__generate_minimal_plugin.snap  touchportal_sdk__codegen__tests__generate_plugin_with_actions.snap  touchportal_sdk__codegen__tests__generate_plugin_with_events_and_states.snap  touchportal_sdk__codegen__tests__generate_plugin_with_settings.snap  touchportal_sdk__data__tests__number_data_validation_invalid_range.snap  touchportal_sdk__data__tests__serialize_example_action_data_choice.snap  touchportal_sdk__data__tests__serialize_example_action_data_number.snap  touchportal_sdk__data__tests__serialize_example_action_data_switch.snap  touchportal_sdk__data__tests__serialize_example_action_data_text.snap  touchportal_sdk__events__tests__serialize_example_event.snap  touchportal_sdk__protocol__tests__bool_error_for_0.snap  touchportal_sdk__protocol__tests__bool_error_for_1.snap  touchportal_sdk__protocol__tests__bool_error_for_empty.snap  touchportal_sdk__protocol__tests__bool_error_for_false.snap  touchportal_sdk__protocol__tests__bool_error_for_no.snap  touchportal_sdk__protocol__tests__bool_error_for_true.snap  touchportal_sdk__protocol__tests__bool_error_for_yes.snap  touchportal_sdk__settings__tests__serialize_example_setting.snap  touchportal_sdk__settings__tests__serialize_example_setting_with_tooltip.snap  touchportal_sdk__states__tests__serialize_example_state.snap  touchportal_sdk__tests__category_validation_empty_category.snap  touchportal_sdk__tests__event_state_validation_choice_mismatch.snap  (+7 more)
stress/: Cargo.toml  build.rs  package.sh
stress/src/: main.rs
test-plugins/stress/: Cargo.toml  package.sh
test-plugins/stress/src/: main.rs
validation-failures-workspace/: Cargo.toml  README.md  test_validation_failures.py  test_validation_failures.sh  uncaught.md  validation_coverage.py
validation-failures-workspace/actions-max-lines/: Cargo.toml  build.rs  expected-error.txt  plugin.rs
validation-failures-workspace/actions-no-lines/: Cargo.toml  build.rs  expected-error.txt
validation-failures-workspace/choice-event-text-state/: Cargo.toml  build.rs  expected-error.txt
validation-failures-workspace/duplicate-ids/: Cargo.toml  MISSING.md  build.rs  expected-error.txt  plugin.rs
validation-failures-workspace/empty-category/: Cargo.toml  build.rs  expected-error.txt
validation-failures-workspace/event-state-choice-mismatch/: Cargo.toml  build.rs  expected-error.txt  plugin.rs
validation-failures-workspace/events-nonexistent-states/: Cargo.toml  build.rs  expected-error.txt  plugin.rs
validation-failures-workspace/inconsistent-data-fields/: Cargo.toml  build.rs  expected-error.txt
validation-failures-workspace/invalid-api-versions/: Cargo.toml  build.rs  expected-error.txt  plugin.rs
validation-failures-workspace/invalid-choice-initial/: Cargo.toml  build.rs  expected-error.txt
validation-failures-workspace/invalid-number-ranges/: Cargo.toml  MISSING.md  build.rs  expected-error.txt
validation-failures-workspace/invalid-plugin-ids/: Cargo.toml  build.rs  expected-error.txt  plugin.rs
validation-failures-workspace/missing-connector-data/: Cargo.toml  build.rs  expected-error.txt  plugin.rs
validation-failures-workspace/missing-default-language/: Cargo.toml  build.rs  expected-error.txt  plugin.rs
validation-failures-workspace/missing-required-fields/: Cargo.toml  MISSING.md  build.rs  expected-error.txt  plugin.rs
youtube/: Cargo.toml  build.rs
youtube/src/: main.rs  youtube_client.rs
(+66 files in other folders)
