[package]
name = "touchpad-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
hex_color = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
quote = "1.0.40"
derive_builder = "0.20.2"
