[package]
name = "touchportal-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_builder = "0.20.2"
eyre = "0.6.12"
hex_color = { version = "3.0.0", features = ["serde"] }
indexmap = "2.10.0"
prettyplease = "0.2.36"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
syn = { version = "2.0.104", default-features = false, features = ["parsing", "printing"] }
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
