[package]
name = "touchpad-youtube-live"
version = "0.1.0"
edition = "2024"
default-run = "touchpad-youtube-live"

[dependencies]
hex_color = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
tokio = { version = "1.47.1", features = ["full"] }
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
touchpad-plugin = { version = "0.1.0", path = "../builder" }
