[package]
name = "touchportal-youtube-live"
version = "0.1.0"
edition = "2024"
default-run = "touchportal-youtube-live"

[build-dependencies]
touchportal-plugin = { version = "0.1.0", path = "../builder" }
serde_json = "1.0.142"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.219" }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
touchportal-plugin = { version = "0.1.0", path = "../builder" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
