[package]
name = "touchportal-sdk"
version = "0.0.1"
repository = "https://github.com/jonhoo/touchportal-plugin/"
description = "SDK for authoring TouchPortal plugins in Rust"
license = "MIT OR Apache-2.0"
edition = "2024"

[features]
mock = ["tokio", "tracing"]

[dependencies]
Inflector = "0.11.4"
derive_builder = "0.20.2"
eyre = "0.6.12"
hex_color = { version = "3.0.0", features = ["serde"] }
indexmap = { version = "2.10.0", features = ["serde"] }
prettyplease = "0.2.36"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
syn = { version = "2.0.104", default-features = false, features = ["parsing"] }
tokio = { version = "1.47.1", features = ["net", "sync", "time", "macros", "rt", "io-util"], optional = true }
tracing = { version = "0.1.41", optional = true }
zip = { version = "5.0.0", default-features = false, features = ["deflate"] }

# to make -Zminimal-versions work
[target.'cfg(any())'.dependencies]
openssl = { version = "0.10.60", optional = true }
openssl-macros = { version = "0.1.1", optional = true }

[dev-dependencies]
float-cmp = "0.10.0"
insta = { version = "1.43.1", features = ["json"] }
pretty_assertions = "1.4.1"
