[workspace]
resolver = "2"
members = [
    "actions-max-lines",
    "actions-no-lines",
    "choice-event-text-state",
    "duplicate-ids",
    "empty-category",
    "event-state-choice-mismatch",
    "events-nonexistent-states",
    "inconsistent-data-fields",
    "invalid-api-versions",
    "invalid-choice-initial",
    "invalid-number-ranges",
    "invalid-plugin-ids",
    "missing-connector-data",
    "missing-default-language",
    "missing-required-fields",
]

# This workspace contains plugins that are expected to fail compilation
# due to build-time validation errors in their build.rs files.
# These plugins test that the SDK properly catches invalid configurations.
