[package]
name = "touchportal-youtube-live"
version = "0.1.0"
edition = "2024"
default-run = "touchportal-youtube-live"

[package.metadata.touchportal]
plugin_name = "YouTubeLive"

[build-dependencies]
touchportal-sdk = { version = "0.1.0", path = "../../sdk" }
serde_json = "1.0.142"

[dependencies]
eyre = "0.6.12"
form_urlencoded = "1.2.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
oauth2 = "5.0.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
touchportal-sdk = { version = "0.1.0", path = "../../sdk" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
webbrowser = "1.0.5"
