[package]
name = "inconsistent-data-fields"
version = "0.1.0"
edition = "2021"

[build-dependencies]
touchportal-sdk = { version = "0.1.0", path = "../../sdk" }
serde_json = "1.0.142"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.219" }
serde_json = "1.0.142"
touchportal-sdk = { version = "0.1.0", path = "../../sdk" }
tracing = "0.1.41"
